Fixed Overflow of Long Content, Removed Some Debug Logs

--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -2,4 +2,5 @@
   font-family: 'Roboto';
   color: #374650;
   margin-top: .7rem;
+  overflow-wrap: break-word;
 }
